--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.4",
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
